Multiple modifications : - Add "Tap" event for carousel link so that it work on phone device - Modify CSS for better integration and visibility on phone device - Add a feature to scroll back to carousel section if the links are   triggered manually - Remove some code in comments that will no longer be used

--- a/src/app/components/carousel/carousel.component.scss
+++ b/src/app/components/carousel/carousel.component.scss
@@ -1,7 +1,7 @@
 .container{
     position: relative;
-    padding: 2rem;
-    min-width: 360px;
+    padding-top: 1rem;
+    width: 100%;
 }
 
 .slider-wrapper {
@@ -34,37 +34,43 @@
     .nav-container {
         display: flex;
         margin: 0 auto;
-        width: 80%;
-        max-width: 500px;
+        width: 70%;
+        max-width: 400px;
         justify-content: space-around;
 
         a {
             width: 1.5rem;
-            height: 1.5rem;
             background-color: #228B89;
             border: 1px solid lightgrey;
             border-radius: 50%;
             opacity: 0.75;
+            aspect-ratio: 1/1;
             transition: opacity ease 0.25;
             &:hover {
                 opacity: 1;
+            }
+            @media screen and (max-width: 750px) {
+                width: 1.25rem;
+            }
+            @media screen and (max-width: 500px) {
+                width: 1rem;
             }
         }
     }
 }
 
+
+
 .description {
     position: relative;
-    padding: 2rem;
-    min-width: 360px;
+    padding: 1rem 0.5rem;
 }
 
 .description-container {
     position: relative;
     margin: 0 auto;
-    padding: 2.5rem;
-    width: 80%;
-    min-width: 300px;
+    padding: 1rem;
+    width: 85%;
     border-radius: 25px;
     background-color: #646464;
 }
@@ -82,6 +88,12 @@
 
     .text {
         margin: 1rem 0;
+        font-size: 0.75rem;
+        line-height: 1.125rem;
         text-align: justify;
+        strong {
+            color: white;
+            font-weight: 900;
+        }
     }
 }
